Additional changes after resolving merge conflicts.